--- a/client/template.html
+++ b/client/template.html
@@ -1,14 +1,12 @@
 <!doctype html>
-<html lang="en">
+<html lang="ru">
 <head>
   <meta charset="utf-8">
-  <title>React App</title>
+  <title>Умный дом G-Home</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-  <div class="container">
-    <div id="app">Loading...</div>
-  </div>
-  <script src="http://localhost:3000/socket.io/socket.io.js"></script>
+    <div id="app"></div>
+    <script src="http://localhost:3000/socket.io/socket.io.js"></script>
 </body>
 </html>
